# projet-annee-3

./: .gitignore  README.md  pyproject.toml
Desktop/ProjetBA3/: board.py  chess_board.py  chess_game.py  main.py
projet-annee-3/: chess_board.py  main.py
projet-annee-3/c++/: .gitignore  CMakeLists.txt
projet-annee-3/c++/src/: testing.cpp
projet-annee-3/c++/src/logic/: bitboard.cpp  bitboard.hpp  board.cpp  board.hpp
